--- a/_config.yml
+++ b/_config.yml
@@ -18,31 +18,31 @@ timezone: Asia/Kolkata
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Mystery Space # the main title
+title: Mystery Paradox Space # the main title
 
-tagline: Ought to make Something Better Off # it will display as the sub-title
+tagline: Life is Full of Unimaginable consequences, I am Letting it thrive ...# it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Mystery Space is Collaborations and Collection of My Projects on Various Fields
 
-# fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://SilentDemonSD.github.io"
 
 github:
   username: SilentDemonSD # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: SilentDemonSD # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: MysterySD
+  email: mysterysd.sd@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/SilentDemonSD # change to your github homepage
+    - https://github.com/SilentDemonSD
+    - https://twitter.com/SilentDemonSD
+    - https://telegram.me/SilentDemonSD
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -70,7 +70,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: dark # [light|dark]
+theme_mode: # [light|dark]
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
@@ -86,7 +86,7 @@ avatar:
 toc: true
 
 comments:
-  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: giscus # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -96,7 +96,7 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
+    repo: SilentDemonSD/SilentDemonSD.github.io
     repo_id:
     category:
     category_id:
