--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,10 +1,10 @@
 name: "Build and Deploy"
 on:
-#  push:
-#    paths-ignore:
-#      - .gitignore
-#      - README.md
-#      - LICENSE
+  push:
+    paths-ignore:
+      - .gitignore
+      - README.md
+      - LICENSE
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
