--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/img/20210212_120620-01.jpeg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
